remove .DS_Store

--- a/test/example_project/azdo/tasks/bash3/shellcheck/shellcheck.yml
+++ b/test/example_project/azdo/tasks/bash3/shellcheck/shellcheck.yml
@@ -10,7 +10,7 @@ steps:
           kubernetesName=$(echo "$(HELM_RELEASE_NAME)" | tr '.' '-')
           echo "Transformed $(HELM_RELEASE_NAME) -> $kubernetesName"
           echo "Remove traffic from canary"
-          oc set route-backends "$kuber§netesName" "$kubernetesName"=100%
+          oc set route-backends "$kubernetesName" "$kubernetesName"=100%
           helm uninstall $(HELM_RELEASE_NAME)-canary --ignore-not-found
         else
           echo "No canary found for release $(HELM_RELEASE_NAME)"
