--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,5 @@ jobs:
         virtualenvs-create: true
         virtualenvs-in-project: true
 
-    - run: poetry shell
     - run: poetry install --no-interaction
-    - run: poetry run pytest  
+    - run: poetry run pytest -v
